--- a/Testbenches/CIC/Makefile
+++ b/Testbenches/CIC/Makefile
@@ -4,14 +4,14 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += hdl/Mixer.v
+VERILOG_SOURCES += hdl/CIC.v
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = Mixer
+TOPLEVEL = CIC
 
 # MODULE is the basename of the Python test file
-MODULE = Mixer_tb
+MODULE = CIC_tb
 
 
 # include cocotb's make rules to take care of the simulator setup
