--- a/Testbenches/MyCIC/integrator/Makefile
+++ b/Testbenches/MyCIC/integrator/Makefile
@@ -2,17 +2,17 @@
 
 # defaults
 SIM ?= icarus
-WAVES ?= 1  # Enable wave dump
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += AMDemod.v
+VERILOG_SOURCES += hdl/integrator.v
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = AMDemodulator
+TOPLEVEL = integrator
 
 # MODULE is the basename of the Python test file
-MODULE = AMDemod_tb
+MODULE = integrator_tb
+
 
 # include cocotb's make rules to take care of the simulator setup
 include $(shell cocotb-config --makefiles)/Makefile.sim
