--- a/Testbenches/MyCIC/integrator/Makefile
+++ b/Testbenches/MyCIC/integrator/Makefile
@@ -4,7 +4,7 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += hdl/integrator.v
+VERILOG_SOURCES += hdl/integrator.sv
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
