--- a/HLSImplementation/PWM/cocoTB/Makefile
+++ b/HLSImplementation/PWM/cocoTB/Makefile
@@ -1,8 +1,8 @@
 # Include the general configuration file
-include ../config.mk
+include ../../config.mk
 
 # Verilog sources
-VERILOG_SOURCES += hdl/top.v
+VERILOG_SOURCES += PWM.v
 
 # VHDL sources (if any)
 VHDL_SOURCES = 
@@ -11,14 +11,14 @@ VHDL_SOURCES =
 TOPLEVEL = top
 
 # Python test module(s)
-MODULE = top_tb
+MODULE = PWM_tb
 
 # Define the clean target
 .PHONY: clean
 
 clean::
 	$(RM) -r __pycache__
+	$(RM) PWM_waves.vcd
 	$(RM) -r sim_build
 	$(RM) results.xml
-	$(RM) *.vcd
 
