--- a/1bitSDRLattice/Testbenches/NCO/Makefile
+++ b/1bitSDRLattice/Testbenches/NCO/Makefile
@@ -13,3 +13,13 @@ TOPLEVEL = nco_sig
 # Python test module(s)
 MODULE = NCO_tb
 
+# Define the clean target
+.PHONY: clean
+
+clean::
+	$(RM) -r __pycache__
+	$(RM) -r sim_build
+	$(RM) results.xml
+	$(RM) *.vcd
+	
+
