--- a/1bitSDRLattice/Testbenches/PWM/Makefile
+++ b/1bitSDRLattice/Testbenches/PWM/Makefile
@@ -13,3 +13,33 @@ TOPLEVEL = PWM
 # Python test module(s)
 MODULE = PWM_tb
 
+# Define the clean target
+.PHONY: clean
+clean::
+	$(RM) -r __pycache__
+	$(RM) -r sim_build
+	$(RM) results.xml
+	$(RM) *.vcd
+	
+# Define the test target
+.PHONY: test
+test:
+	@$(MAKE) -C . SIM=$(SIMULATOR) TOPLEVEL_LANG=verilog TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE) \
+		INPUT_BITS=$(INPUT_BITS) COUNTER_BITS=$(COUNTER_BITS) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS)
+
+# Set default values for the environment variables
+INPUT_BITS ?= 12
+COUNTER_BITS ?= 10
+CLOCK_VALUE ?= 12.5
+ITERATIONS ?= 100
+SIMULATOR ?= icarus
+
+# Run the simulation
+.PHONY: run
+run:
+	$(MAKE) test SIMULATOR=$(SIMULATOR) TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE) \
+		INPUT_BITS=$(INPUT_BITS) COUNTER_BITS=$(COUNTER_BITS) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS)
+
+# Usage:
+# make run INPUT_BITS=12 COUNTER_BITS=10 CLOCK_VALUE=12.5 ITERATIONS=100
+
