--- a/1.RTLImplementation/2.sim/NCO/Makefile
+++ b/1.RTLImplementation/2.sim/NCO/Makefile
@@ -1,8 +1,15 @@
 # Include the general configuration file
 include ../config.mk
 
+# Source directories
+SIM_SRC = $(PWD)
+HW_SRC = ../../1.hw
+V_SRC = $(HW_SRC)/verilog
+SV_SRC = $(HW_SRC)/systemverilog
+
 # Verilog sources
-VERILOG_SOURCES += hdl/NCO.v
+VERILOG_SOURCES += $(V_SRC)/NCO.v
+#SYSTEMVERILOG_SOURCES += $(SV_SRC)/NCO.sv
 
 # VHDL sources (if any)
 VHDL_SOURCES = 
@@ -21,20 +28,46 @@ clean::
 	$(RM) -r sim_build
 	$(RM) results.xml
 	$(RM) *.vcd
-	
+
 # Set default values for the environment variables
-INPUT_BITS ?= 12
+WIDTH ?= 64
 CLOCK_VALUE ?= 12.5
 NUM_TEST_VALUES ?= 100
+
+# Simulator and Parameter declaration
 SIMULATOR ?= icarus
-TOPLEVEL ?= NCO
-MODULE ?= NCO_test
+COMPILE_ARGS += -P$(TOPLEVEL).WIDTH=$(WIDTH)
+
+# Define the test target
+.PHONY: test
+test:
+	@WIDTH=$(WIDTH) CLOCK_VALUE=$(CLOCK_VALUE) NUM_TEST_VALUES=$(NUM_TEST_VALUES) \
+	make SIM=$(SIMULATOR) TOPLEVEL_LANG=verilog TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
 
 # Run the simulation
-run: test
-	INPUT_BITS=$(INPUT_BITS) CLOCK_VALUE=$(CLOCK_VALUE) NUM_TEST_VALUES=$(NUM_TEST_VALUES) $(MAKE) test SIMULATOR=$(SIMULATOR) TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
+.PHONY: run
+run:
+	WIDTH=$(WIDTH) CLOCK_VALUE=$(CLOCK_VALUE) NUM_TEST_VALUES=$(NUM_TEST_VALUES) \
+	$(MAKE) test SIMULATOR=$(SIMULATOR) TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
+
+# Define the help target
+.PHONY: help_tb
+help_tb:
+	@echo "Usage:"
+	@echo "  make run [WIDTH =<bits>] [CLOCK_VALUE=<value>] [NUM_TEST_VALUES=<values>] [SIMULATOR=<simulator>]"
+	@echo ""
+	@echo "Targets:"
+	@echo "  clean       - Remove generated files and directories"
+	@echo "  test        - Run the tests with the specified environment variables"
+	@echo "  run         - Run the tests (shortcut for make test)"
+	@echo "  help_tb     - Display this help message"
+	@echo ""
+	@echo "Variables:"
+	@echo "  WIDTH            - Number of input bits (default: 64)"
+	@echo "  CLOCK_VALUE      - Clock value in ns (default: 12.5 or 80 MHz)"
+	@echo "  NUM_TEST_VALUES  - Number of test values (default: 100)"
+	@echo "  SIMULATOR        - Simulator to use (default: icarus)"
 
 # Usage:
 # make run INPUT_BITS=12 CLOCK_VALUE=12.5 NUM_TEST_VALUES=100
-
 
