--- a/1.RTLImplementation/2.sim/UartRx/Makefile
+++ b/1.RTLImplementation/2.sim/UartRx/Makefile
@@ -8,18 +8,20 @@ V_SRC = $(HW_SRC)/verilog
 SV_SRC = $(HW_SRC)/systemverilog
 
 # Verilog sources
-VERILOG_SOURCES += $(V_SRC)/PWM.v
+#VERILOG_SOURCES += $(V_SRC)/UartRX.v
+VERILOG_SOURCES += hdl/UartRX.v
+#VERILOG_SOURCES += hdl/UartRX.sv
 # Uncomment the line below to use SystemVerilog source
-#VERILOG_SOURCES += $(SV_SRC)/PWM.sv
+#VERILOG_SOURCES += $(SV_SRC)/UartRX.sv
 
 # VHDL sources (if any)
 VHDL_SOURCES = 
 
 # Top-level module name
-TOPLEVEL = PWM
+TOPLEVEL = uart_rx
 
 # Python test module(s)
-MODULE = PWM_tb
+MODULE = UartRX_tb
 
 # Define the clean target
 .PHONY: clean
@@ -30,35 +32,32 @@ clean::
 	$(RM) *.vcd
 
 # Set default values for the environment variables
-INPUT_WIDTH ?= 12
-COUNTER_BITS ?= 10
-OFFSET ?= 0
-CLOCK_VALUE ?= 12.5
-ITERATIONS ?= 100
+CLOCK_VALUE ?= 40.0
+CLOCKS_PER_BIT ?= 217
+BAUD_RATE ?= 115200
+ITERATIONS ?= 50
 
 # Simulator and Parameter declaration
 SIMULATOR ?= icarus
-COMPILE_ARGS += -P$(TOPLEVEL).INPUT_WIDTH=$(INPUT_WIDTH)
-COMPILE_ARGS += -P$(TOPLEVEL).COUNTER_WIDTH=$(COUNTER_BITS)
-COMPILE_ARGS += -P$(TOPLEVEL).OFFSET=$(OFFSET)
+COMPILE_ARGS += -P$(TOPLEVEL).CLKS_PER_BIT=$(CLOCKS_PER_BIT)
 
 # Define the test target
 .PHONY: test
 test:
-	@INPUT_WIDTH=$(INPUT_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
+	@CLOCK_VALUE=$(CLOCK_VALUE) CLOCKS_PER_BIT=$(CLOCKS_PER_BIT) BAUD_RATE=$(BAUD_RATE) ITERATIONS=$(ITERATIONS) \
 	make -C . SIM=$(SIMULATOR) TOPLEVEL_LANG=verilog TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
 
 # Run the simulation
 .PHONY: run
 run:
-	INPUT_BITS=$(INPUT_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
+	CLOCK_VALUE=$(CLOCK_VALUE) CLOCKS_PER_BIT=$(CLOCKS_PER_BIT) BAUD_RATE=$(BAUD_RATE) ITERATIONS=$(ITERATIONS) \
 	$(MAKE) test SIMULATOR=$(SIMULATOR) TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
 
 # Define the help target
 .PHONY: help_tb
 help_tb:
 	@echo "Usage:"
-	@echo "  make run [INPUT_BITS=<bits>] [COUNTER_BITS=<bits>] [OFFSET = <value>] [CLOCK_VALUE=<value>] [ITERATIONS=<values>] [SIMULATOR=<simulator>]"
+	@echo "  make run [CLOCK_VALUE=<value>] [CLOCKS_PER_BIT=<value>] [BAUD_RATE=<value>] [ITERATIONS=<values>] [SIMULATOR=<simulator>]"
 	@echo ""
 	@echo "Targets:"
 	@echo "  clean       - Remove generated files and directories"
@@ -67,13 +66,12 @@ help_tb:
 	@echo "  help_tb     - Display this help message"
 	@echo ""
 	@echo "Variables:"
-	@echo "  INPUT_WIDTH      - Number of input bits (default: 12)"
-	@echo "  COUNTER_BITS     - Number of counter bits (default: 10)"
-	@echo "  OFFSET           - Value of offset (default: 0)"
-	@echo "  CLOCK_VALUE      - Clock value in ns (default: 12.5 or 80 MHz)"
-	@echo "  ITERATIONS       - Number of iterations for the test (default: 100)"
+	@echo "  CLOCK_VALUE      - Clock value in ns (default: 40.0)"
+	@echo "  CLOCKS_PER_BIT   - Number of clocks per bit (default: 217)"
+	@echo "  BAUD_RATE        - Baud rate for UART (default: 115200)"
+	@echo "  ITERATIONS       - Number of iterations for the test (default: 50)"
 	@echo "  SIMULATOR        - Simulator to use (default: icarus)"
 
 # Usage:
-# make run INPUT_WIDTH=12 COUNTER_BITS=10 CLOCK_VALUE=12.5 ITERATIONS=100
+# make run CLOCK_VALUE=40.0 CLOCKS_PER_BIT=217 BAUD_RATE=115200 ITERATIONS=50
 
