--- a/2.HLSImplementation/AMDemod/cocotb/Makefile
+++ b/2.HLSImplementation/AMDemod/cocotb/Makefile
@@ -1,5 +1,7 @@
 # Include the general configuration file
-include /home/user/SDR-HLS/1.RTLImplementation/2.sim/config.mk
+CONFIG_ROOT = /home/user/SDR-HLS/1.RTLImplementation/2.sim
+
+include ../../../1.RTLImplementation/2.sim/config.mk
 
 # Verilog sources
 VERILOG_SOURCES += AMDemod.v
