--- a/5.NewModules/SineGenerator/luttable_lut_module/2.sim/Makefile
+++ b/5.NewModules/SineGenerator/luttable_lut_module/2.sim/Makefile
@@ -2,8 +2,11 @@
 CONFIG_ROOT = ../../../../1.RTLImplementation/2.sim
 include $(CONFIG_ROOT)/config.mk
 
+
 # Verilog sources
 VERILOG_SOURCES += ../1.hw/sinewave_generator.v
+VERILOG_SOURCES += ../1.hw/sinewave_table.v
+                  
 
 # VHDL sources (if any)
 VHDL_SOURCES = 
@@ -11,7 +14,7 @@ VHDL_SOURCES =
 # Top-level module name
 TOPLEVEL = sinewave_generator
 
-# Python test module(s)	
+# Python test module(s)
 MODULE = sinewave_generator_tb
 
 # Define the clean target
