--- a/1.RTLImplementation/2.sim/PWM/Makefile
+++ b/1.RTLImplementation/2.sim/PWM/Makefile
@@ -30,7 +30,7 @@ clean::
 	$(RM) *.vcd
 
 # Set default values for the environment variables
-INPUT_WIDTH ?= 12
+DATA_WIDTH ?= 12
 COUNTER_BITS ?= 10
 OFFSET ?= 0
 CLOCK_VALUE ?= 12.5
@@ -38,27 +38,27 @@ ITERATIONS ?= 100
 
 # Simulator and Parameter declaration
 SIMULATOR ?= icarus
-COMPILE_ARGS += -P$(TOPLEVEL).INPUT_WIDTH=$(INPUT_WIDTH)
+COMPILE_ARGS += -P$(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
 COMPILE_ARGS += -P$(TOPLEVEL).COUNTER_WIDTH=$(COUNTER_BITS)
 COMPILE_ARGS += -P$(TOPLEVEL).OFFSET=$(OFFSET)
 
 # Define the test target
 .PHONY: test
 test:
-	@INPUT_WIDTH=$(INPUT_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
+	@DATA_WIDTH=$(DATA_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
 	make -C . SIM=$(SIMULATOR) TOPLEVEL_LANG=verilog TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
 
 # Run the simulation
 .PHONY: run
 run:
-	INPUT_BITS=$(INPUT_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
+	DATA_BITS=$(DATA_WIDTH) COUNTER_BITS=$(COUNTER_BITS) OFFSET=$(OFFSET) CLOCK_VALUE=$(CLOCK_VALUE) ITERATIONS=$(ITERATIONS) \
 	$(MAKE) test SIMULATOR=$(SIMULATOR) TOPLEVEL=$(TOPLEVEL) MODULE=$(MODULE)
 
 # Define the help target
 .PHONY: help_tb
 help_tb:
 	@echo "Usage:"
-	@echo "  make run [INPUT_BITS=<bits>] [COUNTER_BITS=<bits>] [OFFSET = <value>] [CLOCK_VALUE=<value>] [ITERATIONS=<values>] [SIMULATOR=<simulator>]"
+	@echo "  make run [DATA_WIDTH=<bits>] [COUNTER_BITS=<bits>] [OFFSET = <value>] [CLOCK_VALUE=<value>] [ITERATIONS=<values>] [SIMULATOR=<simulator>]"
 	@echo ""
 	@echo "Targets:"
 	@echo "  clean       - Remove generated files and directories"
@@ -67,7 +67,7 @@ help_tb:
 	@echo "  help_tb     - Display this help message"
 	@echo ""
 	@echo "Variables:"
-	@echo "  INPUT_WIDTH      - Number of input bits (default: 12)"
+	@echo "  DATA_WIDTH      - Number of input bits (default: 12)"
 	@echo "  COUNTER_BITS     - Number of counter bits (default: 10)"
 	@echo "  OFFSET           - Value of offset (default: 0)"
 	@echo "  CLOCK_VALUE      - Clock value in ns (default: 12.5 or 80 MHz)"
@@ -75,5 +75,5 @@ help_tb:
 	@echo "  SIMULATOR        - Simulator to use (default: icarus)"
 
 # Usage:
-# make run INPUT_WIDTH=12 COUNTER_BITS=10 CLOCK_VALUE=12.5 ITERATIONS=100
+# make run DATA_WIDTH=12 COUNTER_BITS=10 CLOCK_VALUE=12.5 ITERATIONS=100
 
